# ROS360_Robotics

./: CMakeLists.txt  README.md  package.xml
config/: husky_rviz.config.rviz
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/kmf3_ros360_cpp/lib/kmf3_ros360_cpp/: examplePublisher  exampleSubscriber  helloworld  lidarSub  randomRobot  templatePubSub  worksheet3
install/kmf3_ros360_cpp/share/ament_index/resource_index/package_run_dependencies/: kmf3_ros360_cpp
install/kmf3_ros360_cpp/share/ament_index/resource_index/parent_prefix_path/: kmf3_ros360_cpp
install/kmf3_ros360_cpp/share/kmf3_ros360_cpp/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/kmf3_ros360_cpp/share/kmf3_ros360_cpp/cmake/: kmf3_ros360_cppConfig.cmake
install/kmf3_ros360_cpp/share/kmf3_ros360_cpp/launch/: husky.launch.py
launch/: assignment.launch.py  colour_detector.launch.xml  husky.launch.py
log/: latest_build
src/: assignment24.cpp  colourClient.cpp  helloworld.cpp  huskyPubSub.cpp  randomRobot.cpp  templatePubSub.cpp  visualPerception.cpp  worksheet3.cpp
